--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,11 +55,11 @@ jobs:
     #       # comment oidc-provider-name when you test locally on codespace with act, getting an error for "ACTION_*" variable,
     #       # and uncomment when you test on gitub runner
     #       disable-job-summary: false
-      env:
-          JF_URL: ${{env.JF_RT_URL}}
-          JFROG_CLI_RELEASES_REPO: '${{ env.JF_RT_URL }}/artifactory/${{ env.RT_REPO_VIRTUAL}}'
-          JFROG_CLI_EXTRACTORS_REMOTE: '${{ env.JF_RT_URL }}/artifactory/${{ env.RT_REPO_VIRTUAL}}'
-          JF_GIT_TOKEN: ${{ secrets.JF_TK}}
+      # env:
+      #     JF_URL: ${{env.JF_RT_URL}}
+      #     JFROG_CLI_RELEASES_REPO: '${{ env.JF_RT_URL }}/artifactory/${{ env.RT_REPO_VIRTUAL}}'
+      #     JFROG_CLI_EXTRACTORS_REMOTE: '${{ env.JF_RT_URL }}/artifactory/${{ env.RT_REPO_VIRTUAL}}'
+      #     JF_GIT_TOKEN: ${{ secrets.JF_TK}}
  
  
     - name: Upload all Terraform modules
