--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,9 +32,10 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Set up JFrog CLI
-      uses: jfrog/setup-jfrog-cli@v3
+      uses: jfrog/setup-jfrog-cli@v4
       with:
-          version: latest
+          version: 2.72.2
+          oidc-provider-name: ${{env.OIDC_PROVIDER_NAME}}
 
     - name: Configure JFrog CLI with access token
       env:
