--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,10 @@ jobs:
       with:
           version: 2.72.2
           oidc-provider-name: ${{env.OIDC_PROVIDER_NAME}}
-
+      env:
+          JF_RT_URL: ${{ env.JF_RT_URL }}
+          JF_ACCESS_TOKEN: ${{ secrets.JF_TK }}
+          
     - name: Configure JFrog CLI with access token
       env:
           JF_RT_URL: ${{ env.JF_RT_URL }}
