--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ env:
   JFROG_CLI_LOG_LEVEL: 'DEBUG' # DEBUG, INFO, WARN, ERROR
   RBv2_SIGNING_KEY: 'mgmkey'
   PACKAGE_SCOPE: '@mgmresorts'
-  OIDC_PROVIDER_NAME: 'mgmri-commerce-oidc'
+  OIDC_PROVIDER_NAME: 'test-exploration-oidc'
   DISABLE_JOB_SUMMARY: false;
   
 permissions:
