--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,10 @@
 name: Upload Terraform Modules to JFrog Artifactory
  
 on:
-  push:
-    branches:
-      # - main
+ workflow_dispatch:
+  # push:
+  #   branches:
+  #     # - main
 env:
   JF_URL: https://mgmresorts.jfrog.io
   JFROG_USERNAME: 'arana@mgmresorts.com'
