--- a/.github/workflows/tf-xray-publish.yml
+++ b/.github/workflows/tf-xray-publish.yml
@@ -50,7 +50,7 @@ jobs:
       run: |
         cd test-app/
         ls -ltrha
-        jf audit --format=table --extended-table=true --secrets=true --iac=true  --sca=true --sast=true --debug=true --fail=false
+        jf audit --format=table --extended-table=true --secrets=true --iac=true  --sca=true --sast=true --fail=false
 
     - name: Publish modules to Artifactory
       run: |
