--- a/.github/workflows/tf-xray-publish.yml
+++ b/.github/workflows/tf-xray-publish.yml
@@ -48,7 +48,7 @@ jobs:
 
     - name: Xray Audit
       run: |
-        cd test-app/
+        cd test-app
         ls -ltrha
         jf audit --format=table --extended-table=true --secrets=true --iac=true  --sca=true --sast=true --fail=false
 
@@ -73,6 +73,6 @@ jobs:
       run: |
         jf rt bp ${{env.BUILD_NAME}} ${{env.BUILD_ID}} --detailed-summary=true
 
-    - name: Build Scan
-      run: |
-        jf bs ${{env.BUILD_NAME}} ${{env.BUILD_ID}} --rescan=true --format=table --extended-table=true --vuln=true --fail=false
+    # - name: Build Scan
+    #   run: |
+    #     jf bs ${{env.BUILD_NAME}} ${{env.BUILD_ID}} --rescan=true --format=table --extended-table=true --vuln=true --fail=false
