--- a/.github/workflows/tf-xray-publish.yml
+++ b/.github/workflows/tf-xray-publish.yml
@@ -48,6 +48,7 @@ jobs:
 
     - name: Xray Audit
       run: |
+        cd poc-pin-reset
         jf audit --format=table --extended-table=true --secrets=true --iac=true  --sca=true --sast=true --fail=false
 
     - name: Publish modules to Artifactory
