--- a/.github/workflows/tf-xray-publish.yml
+++ b/.github/workflows/tf-xray-publish.yml
@@ -53,7 +53,7 @@ jobs:
 
     - name: Publish modules to Artifactory
       run: |
-        jf terraform publish --namespace=example2 --provider=azurerm --tag=v0.0.1 --build-name=${{env.BUILD_NAME}} --build-number=${{env.BUILD_ID}} --module="terra-azurerm"
+        jf terraform publish --namespace=example2 --provider=azurerm --tag=v0.0.1 --build-name=${{env.BUILD_NAME}} --build-number=${{env.BUILD_ID}} 
 
     - name: Xray Scan Packages
       run: |
