--- a/.github/workflows/tf-xray-publish.yml
+++ b/.github/workflows/tf-xray-publish.yml
@@ -9,7 +9,7 @@ env:
   JF_URL: https://mgmresorts.jfrog.io
   JFROG_USERNAME: 'arana@mgmresorts.com'
   RT_REPO_VIRTUAL: 'gaming-hospitality-iac-terraform-dev-virtual'
-  JFROG_CLI_LOG_LEVEL: 'DEBUG' # DEBUG, INFO, WARN, ERROR
+  JFROG_CLI_LOG_LEVEL: 'ERROR' # DEBUG, INFO, WARN, ERROR
   RBv2_SIGNING_KEY: 'mgmkey'
   PACKAGE_SCOPE: '@mgmresorts'
   OIDC_PROVIDER_NAME: 'test-exploration-oidc'
@@ -55,10 +55,10 @@ jobs:
       run: |
         jf terraform publish --namespace=example2 --provider=azurerm --tag=v0.0.1 --build-name=${{env.BUILD_NAME}} --build-number=${{env.BUILD_ID}} 
 
-    - name: Xray Scan Packages
-      run: |
-        echo "\n\n**** JF: scan ****"
-        jf scan . --extended-table=true --format=simple-json  --watches "room-booking-test-watch"
+    # - name: Xray Scan Packages
+    #   run: |
+    #     echo "\n\n**** JF: scan ****"
+    #     jf scan . --extended-table=true --format=simple-json  --watches "room-booking-test-watch"
 
     - name: Build Info -> Colect Build Environment
       run: |
@@ -72,6 +72,7 @@ jobs:
       run: |
         jf rt bp ${{env.BUILD_NAME}} ${{env.BUILD_ID}} --detailed-summary=true
 
-    # - name: Build Scan
-    #   run: |
-    #     jf bs ${{env.BUILD_NAME}} ${{env.BUILD_ID}} --rescan=true --format=table --extended-table=true --vuln=true --fail=false
+    - name: Build Scan
+      run: |
+        jf bs ${{env.BUILD_NAME}} ${{env.BUILD_ID}} 
+        # --rescan=true --format=table --extended-table=true --vuln=true --fail=false
