--- a/.github/workflows/tf-xray-publish.yml
+++ b/.github/workflows/tf-xray-publish.yml
@@ -53,7 +53,7 @@ jobs:
 
     - name: Publish modules to Artifactory
       run: |
-        jf terraform publish --namespace=example --provider=azurerm --tag=v0.0.1 --build-name=${{env.BUILD_NAME}} --build-number=${{env.BUILD_ID}} --module-name=poc-pin-reset
+        jf terraform publish --namespace=example --provider=azurerm --tag=v0.0.1 --build-name=${{env.BUILD_NAME}} --build-number=${{env.BUILD_ID}} --module="poc-pin-reset"
 
     # - name: Xray Scan Packages
     #   run: |
