--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,14 +53,34 @@ jobs:
   
     - name: Download NuGet CLI
       run: |
-          wget https://dist.nuget.org/win-x86-commandline/latest/nuget.exe
+        mkdir -p $HOME/nuget
+        wget -O $HOME/nuget/nuget.exe https://dist.nuget.org/win-x86-commandline/latest/nuget.exe
+        echo "export PATH=$HOME/nuget:$PATH" >> $GITHUB_ENV
+
+    - name: Check nuget.exe is in PATH
+      run: which nuget.exe || echo "nuget.exe not found in PATH"
+
         
     - name: Restore NuGet packages
       run: |
           mono nuget.exe restore "gso-dynamics-plugin-main/MGMRI Sales/MGMRI Sales.sln"
 
-    - name: Xray Audit
+    # - name: Xray Audit
+    #   run: |
+    #     sleep 120
+    #     jf audit --format=table --extended-table=true --secrets=true --iac=true  --sca=true --sast=true --fail=false 
+
+    - name: Run JFrog Xray Audit and Save Output
+      continue-on-error: true
       run: |
-        sleep 120
-        jf audit --format=table --extended-table=true --secrets=true --iac=true  --sca=true --sast=true --fail=false
+        jf audit --nuget=true --format=table --extended-table=true \
+        --secrets=true --sast=true --sca=true --licenses=true --fail=false \
+        > xray-audit-report.txt
+
+    - name: Upload Xray Audit Report
+      uses: actions/upload-artifact@v4
+      with:
+        name: xray-audit-report
+        path: xray-audit-report.txt
+
 
