display job summary fix

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,8 @@ jobs:
     - name: Run JFrog Xray Audit and Save Output
       continue-on-error: true
       run: |
-        jf audit --format=table --extended-table=true --nuget=true --secrets=true --sast=true --sca=true --licenses=true --fail=false > xray-audit-report.txt
+        jf audit --format=table --extended-table=true --nuget=true --secrets=true --sast=true --sca=true --licenses=true --fail=false >> xray-audit-report.txt
+        cat xray-audit-report.txt >> $GITHUB_STEP_SUMMARY
 
     - name: Upload Xray Audit Report
       uses: actions/upload-artifact@v4
