--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,21 +30,17 @@ jobs:
     - name: Set up JFrog CLI
       uses: jfrog/setup-jfrog-cli@v4
       with:
-        version: 2.72.2
+        version: 2.76.1
         oidc-provider-name: ${{env.OIDC_PROVIDER_NAME}}
       env:
         JF_URL: ${{ env.JF_URL }}
         JF_ACCESS_TOKEN: ${{ secrets.JF_TK }}
   
-    # - name: Run JFrog Xray Audit and Save Output
-    #   continue-on-error: true
-    #   run: |
-    #     jf audit gso-dynamics-plugin-main/* --format=table --extended-table=true --nuget=true --secrets=true --sast=true --sca=true --vuln=true --licenses=true --fail=false >> xray-audit-report.txt
-    - name: Scan Artifacts
+    - name: Run JFrog Xray Audit and Save Output
+      continue-on-error: true
       run: |
-          sleep 15
-          # jf s "*.zip" --repo-path "${{ env.JF_RT_REPO_VIRTUAL }}/${{ inputs.version }}/"
-          jf scan . --format=table --sync=true --extended-table=true --watches=event-infrastructure --detailed-summary=true --vuln=true | tee -a $GITHUB_STEP_SUMMARY
+        jf audit gso-dynamics-plugin-main/* --format=table --extended-table=true --nuget=true --secrets=true --sast=true --sca=true --vuln=true --licenses=true --fail=false >> xray-audit-report.txt
+   
     - name: Job Summary
       run: |
         echo '```' >> $GITHUB_STEP_SUMMARY
