--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,12 @@ jobs:
       continue-on-error: true
       run: |
         jf audit gso-dynamics-plugin-main/* --format=table --extended-table=true --nuget=true --secrets=true --sast=true --sca=true --vuln=true --licenses=true --fail=false >> xray-audit-report.txt
-   
+
+    - name: Scan Artifacts
+      run: |
+          sleep 15
+          # jf s "*.zip" --repo-path "${{ env.JF_RT_REPO_VIRTUAL }}/${{ inputs.version }}/"
+          jf scan ./artifacts/*.zip --format=table --sync=true --extended-table=true   --watches=event-infrastructure --detailed-summary=true --vuln=true | tee -a $GITHUB_STEP_SUMMARY   
     - name: Job Summary
       run: |
         echo '```' >> $GITHUB_STEP_SUMMARY
