--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ name: Jfrog Xray audit
 on:
   push:
     branches:
-    - main
+    - scan-dev
 env:
   JF_URL: https://mgmresorts.jfrog.io
   JFROG_CLI_LOG_LEVEL: 'DEBUG' # DEBUG, INFO, WARN, ERROR
