--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,10 @@
 name: Jfrog Xray audit
 
 on:
-  push:
-    branches:
-    - main
+  workflow_dispatch:
+  # push:
+  #   branches:
+  #   - main
 env:
   JF_URL: https://mgmresorts.jfrog.io
   JFROG_CLI_LOG_LEVEL: 'DEBUG' # DEBUG, INFO, WARN, ERROR
