--- a/.github/workflows/jf-audit.yml
+++ b/.github/workflows/jf-audit.yml
@@ -20,7 +20,7 @@ permissions:
   issues: read
 
 jobs:
-  xray-nuget-audit:
+  xray-audit:
     runs-on: ubuntu-latest
 
     steps:
@@ -40,7 +40,7 @@ jobs:
         # JF_ACCESS_TOKEN: ${{ secrets.JF_TK }}
   
     - name: Run JFrog Xray Audit and Save Output
-      # continue-on-error: true
+      continue-on-error: true
       run: |
         jf audit --format=table --extended-table=true --mvn=true --secrets=true --sast=true --sca=true --vuln=true --licenses=true --fail=false >> xray-audit-report.txt
    
