--- a/.github/workflows/jf-xray.yml
+++ b/.github/workflows/jf-xray.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Checkout source code
       uses: actions/checkout@v3
       with:
-        ref: apigee-ows-name-main
+        ref: apigee-mtls
 
 
     - name: Set up JFrog CLI
