--- a/.github/workflows/jf-xray.yml
+++ b/.github/workflows/jf-xray.yml
@@ -41,12 +41,12 @@ jobs:
     - name: Run JFrog Xray Audit and Save Output
       continue-on-error: true
       run: |
-        jf audit --format=table --extended-table=true --secrets=true --sast=true --sca=true --vuln=true --licenses=true --fail=false >> xray-audit-report.txt
+        jf audit --format=table --extended-table=true >> xray-audit-report.txt
    
     - name: Scan
       continue-on-error: true
       run: |
-        jf scan . --extended-table=true  
+        jf scan . --extended-table=true --vuln=true  
    
     - name: Job Summary
       run: |
