--- a/.github/workflows/jf-xray.yml
+++ b/.github/workflows/jf-xray.yml
@@ -1,4 +1,4 @@
-name: Jfrog Xray audit
+name: Jfrog Xray integration 
 
 on:
   push:
@@ -19,7 +19,7 @@ permissions:
   issues: read
 
 jobs:
-  xray-audit:
+  xray-audit-scan:
     runs-on: ubuntu-latest
 
     steps:
@@ -41,7 +41,7 @@ jobs:
     - name: Run JFrog Xray Audit and Save Output
       continue-on-error: true
       run: |
-        jf audit --format=table --extended-table=true --mvn=true --secrets=true --sast=true --sca=true --vuln=true --licenses=true --fail=false >> xray-audit-report.txt
+        jf audit --format=table --extended-table=true  --secrets=true --sast=true --sca=true --vuln=true --licenses=true --fail=false >> xray-audit-report.txt
    
     # - name: Scan
     #   continue-on-error: true
