--- a/.github/workflows/jf-xray.yml
+++ b/.github/workflows/jf-xray.yml
@@ -6,6 +6,7 @@ on:
     - apigee-mtls
 env:
   JF_URL: https://mgmresorts.jfrog.io
+  RT_REPO_VIRTUAL: 'source-packages-generic-dev-virtual'
   JFROG_CLI_LOG_LEVEL: 'DEBUG' # DEBUG, INFO, WARN, ERROR
   OIDC_PROVIDER_NAME: 'test-exploration-oidc'
   DISABLE_JOB_SUMMARY: false
@@ -41,8 +42,18 @@ jobs:
       continue-on-error: true
       run: |
         jf audit --format=table --extended-table=true  --secrets=true --sast=true --sca=true --vuln=true --licenses=true --fail=false >> xray-audit-report.txt
-   
-   
+    
+    - name: upload package
+      run: |
+          jf rt u "/**" "$RT_REPO_VIRTUAL/" > upload_result.json
+          echo "JFrog upload completed."
+
+    - name: files upload to Jfrog report
+      uses: actions/upload-artifact@v4
+      with:
+          name: upload_result
+          path: upload_result.json
+          
     - name: Scan and Save Output
       continue-on-error: true
       run: |
