--- a/.github/workflows/jf-xray.yml
+++ b/.github/workflows/jf-xray.yml
@@ -50,14 +50,14 @@ jobs:
 
     - name: upload package
       run: |
-        jf rt u "." "$RT_REPO_VIRTUAL/{1}" --recursive=true --regexp=true > upload_result.json
+        jf rt u "proxybundle/**" "$RT_REPO_VIRTUAL/" --recursive=true
         echo "JFrog upload completed."
         
-    - name: files upload to Jfrog report
-      uses: actions/upload-artifact@v4
-      with:
-          name: upload_result
-          path: upload_result.json
+    # - name: files upload to Jfrog report
+    #   uses: actions/upload-artifact@v4
+    #   with:
+    #       name: upload_result
+    #       path: upload_result.json
           
     - name: Scan and Save Output
       continue-on-error: true
