--- a/.github/workflows/jf-audit.yml
+++ b/.github/workflows/jf-audit.yml
@@ -43,7 +43,10 @@ jobs:
       continue-on-error: true
       run: |
         jf audit --format=table --extended-table=true --secrets=true --sast=true --sca=true --vuln=true --licenses=true --fail=false >> xray-audit-report.txt
-   
+    - name: upload package
+      run: |
+        jf rt u "/**" "$RT_REPO_VIRTUAL/" --recursive=true
+        echo "JFrog upload completed."
     - name: Scan
       continue-on-error: true
       run: |
