--- a/.github/workflows/jf-xray.yml
+++ b/.github/workflows/jf-xray.yml
@@ -9,6 +9,7 @@ env:
   JFROG_CLI_LOG_LEVEL: 'DEBUG' # DEBUG, INFO, WARN, ERROR
   OIDC_PROVIDER_NAME: 'test-exploration-oidc'
   DISABLE_JOB_SUMMARY: false
+  RT_REPO_VIRTUAL: 'source-packages-generic-dev-virtual'
 
 permissions:
   actions: read # for detecting the Github Actions environment.
