--- a/.github/workflows/jf-audit.yml
+++ b/.github/workflows/jf-audit.yml
@@ -46,7 +46,7 @@ jobs:
         jf audit --format=table --extended-table=true --secrets=true --sast=true --sca=true --vuln=true --licenses=true --fail=false >> xray-audit-report.txt
     - name: upload package
       run: |
-        jf rt u "/**" "$RT_REPO_VIRTUAL/" --recursive=true
+        jf rt u "." "$RT_REPO_VIRTUAL/" --recursive=true --flat=false
         echo "JFrog upload completed."
     - name: Scan
       continue-on-error: true
